# rust-lambda-pristine

./: Cargo.toml  Makefile  README.md
.github/workflows/: audit.yml  rust.yml
src/: main.rs
