[package]
name = "lambda_pristine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "lambda"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.4"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }